Fixed stretched figure images

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2597,6 +2597,7 @@ ul.figures li a img
 {
   float: left;
   max-width: 150px;
+  height: auto;
   border: 1px solid #eee;
 }
 
